# Herald

./: .gitignore  1.1plan.md  CHANGELOG.md  CODEX_REVIEW_2026-07-20.md  CONTRIBUTING.md  DEPLOY_v2.2.6.md  ExportOptions.plist  HERALD_PROJECT_BRIEF.md  HERALD_REMEDY_PLAN.md  LICENSE  MAINTAINER_NOTES.md  MARCHING_ORDERS_DEPLOY.md  MIMO_CONTINUATION_2026-07-21.md  MIMO_DEBRIEF_MCP_REALTIME_AND_RESPONSIVE_UI_2026-07-20.md  MIMO_MARCHING_ORDERS.md  MIMO_MARCHING_ORDERS_2026-07-20_IPAD_NOTES.md  MIMO_MARCHING_ORDERS_2026-07-20_NOTIFICATIONS_TOOLBAR_IPAD.md  MIMO_MARCHING_ORDERS_2026-07-20_REASONING_STREAMING_PUSH_NOTES.md  MIMO_MARCHING_ORDERS_2026-07-20_STREAMING_DURABLE_LOG.md  MIMO_MARCHING_ORDERS_2026-07-21_BUGFIX_RELEASE.md  MIMO_MARCHING_ORDERS_2026-07-21_V175_BUGFIX.md  MIMO_MARCHING_ORDERS_2026-07-21_V177.md  MIMO_MARCHING_ORDERS_2026-07-21_V181.md  MONETIZATION.md  PencilKitSpike  README.md  ROADMAP-APPSTORE.md  SECURITY.md  app-description.md  currentlybuilt.md  project.yml
Herald/: AppEntry.swift  ContentView.swift  Herald.entitlements
Herald-export/: DistributionSummary.plist  ExportOptions.plist
Herald.xcarchive/: Info.plist
Herald.xcodeproj/: project.pbxproj
HeraldIntents/: Info.plist  IntentHandler.swift
HeraldNotificationService/: Info.plist  NotificationService.swift
HeraldTests/: AppStoresTests.swift  AppTemplateTests.swift  AppleTTSServiceTests.swift  HealthServiceTests.swift  JobStreamCoordinatorTests.swift  MimoFixtureTests.swift  MockNotesRepository.swift  ModelStoreTests.swift  NoteDirectiveParserTests.swift  NoteRecognitionCoordinatorTests.swift  NotesIntegrationTests.swift  NotesRepositoryTests.swift  NotesStoreTests.swift  PushRegistrationTests.swift  QuickNotesTests.swift  SSELineIteratorTests.swift  SpeechServiceTests.swift  StreamContractV2Tests.swift
HeraldUITests/: AppTemplateUITests.swift  AppTemplateUITestsLaunchTests.swift
HeraldWidgets/: HeraldActivityAttributes.swift  HeraldHealthWidget.swift  HeraldLiveActivity.swift  HeraldStatusWidget.swift  (+4 more)
connector/: README.md  SENSOR_SCHEMA.md  pyproject.toml
connector/src/herald_connector/: cli.py  client.py  herald_api_executor.py  herald_runner.py  hermes_api_executor.py  hermes_gateway_executor.py  hermes_runner.py  mcp_registration.py  mcp_server.py  note_contract.py  relay_server.py  runtime_adapter.py  sensor_store.py  service_management.py  service_runner.py  setup_code.py  state.py  stream_contract.py  talk_support.py
connector/src/hermes_mobile_connector/: cli.py  client.py  git_diff.py  hermes_api_executor.py  hermes_runner.py  mcp_registration.py  mcp_server.py  runtime_adapter.py  sensor_store.py  state.py  talk_support.py
connector/tests/: test_connector.py  test_context_validation.py  test_git_diff.py  test_health_check.py  test_note_contract.py  test_sensor_store.py  test_service_management.py  test_stream_contract.py  test_streaming.py
connector/tests/fixtures/hermes/: stream_v2_cancelled.json  stream_v2_error.json  stream_v2_multi_tools.json  stream_v2_reasoning.json  stream_v2_text_only.json
connector/tests/fixtures/notes/: note_enrichment_result.json
relay/: .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
relay/app/: __init__.py  admin.py  apns.py  app_attest.py  app_attest_trust.py  config.py  database.py  herald_adapter.py  hermes_adapter.py  main.py  models.py  notes.py  push_broker.py  relay_identity.py  schemas.py  services.py  streaming.py  talk_mcp.py
relay/docs/: fly-io.md  local-dev.md
relay/tests/: test_api.py  test_app_attest.py  test_health.py  test_herald_adapter.py  test_hermes_adapter.py  test_hosts.py  test_notes.py  test_pairing.py  test_push_broker.py  test_relay_identity.py  test_storage.py  test_streaming.py
(+406 files in other folders)
