[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herald-connector"
version = "0.4.0"
description = "Connector process that bridges a local Herald CLI to Herald relay."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0,<1.0.0",
  "mcp>=1.0.0,<2.0.0",
  "qrcode>=8.2,<9.0",
  "ruamel.yaml>=0.18.0,<0.19.0",
  "websockets>=15.0,<16.0",
]

[project.scripts]
herald = "herald_connector.cli:main"
herald-mcp = "herald_connector.mcp_server:main"
# Compatibility entrypoints for Hermes configs created before the Herald rename.
# Keeping these aliases prevents a cached gateway command from crashing while
# configure-mcp rewrites the config to the canonical herald-mcp executable.
hermes-mobile = "herald_connector.cli:main"
hermes-mobile-mcp = "herald_connector.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
include = ["herald_connector*"]
