[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-mobile-relay"
version = "0.1.0"
description = "FastAPI relay for Hermes Mobile."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.0,<47.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx[http2]>=0.28.0,<1.0.0",
  "PyJWT[crypto]>=2.9.0,<3.0.0",
  "mcp>=1.0.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "qrcode>=8.2,<9.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.scripts]
hermes-mobile-relay-admin = "app.admin:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["certs/*.pem"]
